# omnidirectional-vehicle

./: LICENSE  README.md
odv_description/: CMakeLists.txt  package.xml
odv_description/launch/: upload.launch
odv_description/meshes/base/: base.blend  base.dae
odv_description/meshes/sensors/laser_scanner/: laser.blend
odv_description/robots/: odv_default.urdf.xacro
odv_description/urdf/: actuators.urdf.xacro  base.urdf.xacro  sensors.urdf.xacro  snippets.urdf.xacro
odv_gazebo/: CMakeLists.txt  package.xml
odv_gazebo/launch/: empty_world.launch
odv_latest/: CMakeLists.txt  package.xml
odv_latest/launch/: gazebo.launch
odv_latest/meshes/: base.stl
odv_latest/meshes/sensors/laser_scanner/: laser.dae
odv_latest/urdf/: odv.urdf.xacro
